# omnis

./: .env.example  .gitignore  CLAUDE.md  DOCS.md  LICENSE  NETWORKING.md  README.md  Start-Dev.ps1  ci.ps1  ci.sh  cloracle.code-workspace  deploy.ps1  deploy.sh  fetch-agent.ps1  main.py  omnis.code-workspace  pyproject.toml  requirements.txt  server.py  sync-agent.ps1
api/: app.py  schemas.py
core/: agent_loader.py  agent_tools.py  collector.py  config.py  consolidation.py  constants.py  description_optimizer.py  fact_checker.py  github_publisher.py  inbox.py  job_status.py  knowledge.py  manual_ingestion.py  mcp_server.py  micro_consolidation.py  pipeline.py  query.py  registry.py  research_session.py  scheduler.py  scheduler_instance.py  self_improving.py  session_report.py  skill_quality.py  skill_regression_analyzer.py  skill_writer.py  soul_experiment_log.py  state.py  warnings.py
deploy/: deploy.sh  fetch-agent.sh  nginx.conf  omnis.service  sync-agent.sh
scripts/: pull-agent.ps1  pull-agent.sh  pull-skills.ps1  push-agent.ps1  push-agent.sh
tests/: test_agent_loader.py  test_agent_tools.py  test_channel_health.py  test_collector.py  test_config.py  test_consolidation.py  test_gemini_parsers.py  test_gemini_provider.py  test_gemini_research_integration.py  test_github_publisher.py  test_inbox.py  test_knowledge.py  test_manual_ingestion.py  test_mcp_server.py  test_memory_rename.py  test_micro_consolidation.py  test_pipeline.py  test_query.py  test_query_endpoint.py  test_research_session.py  test_self_improving.py  test_session_endpoints.py  test_state.py  (+3 more)
(+76 files in other folders)
